logs/dag_id=save_city_info_weather_v01/run_id=manual__2024-09-14T20:27:33.786320+00:00/task_id=insert_data/attempt=6.log
[2024-09-14T21:00:32.152+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:27:33.786320+00:00 [queued]>
[2024-09-14T21:00:32.189+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:27:33.786320+00:00 [queued]>
[2024-09-14T21:00:32.190+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T21:00:32.191+0000] {taskinstance.py:1284} INFO - Starting attempt 6 of 6
[2024-09-14T21:00:32.192+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T21:00:32.226+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-14 20:27:33.786320+00:00
[2024-09-14T21:00:32.238+0000] {standard_task_runner.py:55} INFO - Started process 17437 to run task
[2024-09-14T21:00:32.247+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather_v01', 'insert_data', 'manual__2024-09-14T20:27:33.786320+00:00', '--job-id', '281', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmpti30efax']
[2024-09-14T21:00:32.249+0000] {standard_task_runner.py:83} INFO - Job 281: Subtask insert_data
[2024-09-14T21:00:32.517+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather_v01.insert_data manual__2024-09-14T20:27:33.786320+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T21:00:32.732+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T20:27:33.786320+00:00
AIRFLOW_CTX_TRY_NUMBER=6
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T20:27:33.786320+00:00
[2024-09-14T21:00:32.734+0000] {sql.py:253} INFO - Executing: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s")
[2024-09-14T21:00:32.772+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T21:00:33.692+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T21:00:33.738+0000] {sql.py:364} INFO - Running statement: insert into weathers (id, city_name, max_temp, min_temp, wind, description) values (2, "%(name)s", "%(max_temp)s", "$(min_temp)s", "%(wind)s", "%(description)s"), parameters: {'name': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["name"]}}', 'max_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["max_temp"]}}', 'min_temp': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["min_temp"]}}', 'wind': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["wind"]}}', 'description': '{{ti.xcom_pull(task_ids="fetcher_data", key="return_value")["description"]}}'}
[2024-09-14T21:00:33.776+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 367, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^

[2024-09-14T21:00:33.899+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=save_city_info_weather_v01, task_id=insert_data, execution_date=20240914T202733, start_date=20240914T210032, end_date=20240914T210033
[2024-09-14T21:00:33.992+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 281 for task insert_data (syntax error at or near "fetcher_data"
LINE 1: ...escription) values (2, "'{{ti.xcom_pull(task_ids="fetcher_da...
                                                             ^
; 17437)
[2024-09-14T21:00:34.102+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T21:00:34.321+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
